--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Watch Bayside</title>
+    <title>Watch Bayside Now</title>
 </head>
 <body>
     <h1 class="page-top">
