Moved episode name to new line

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
         </li>
          <li class="card">
-          <p>City Beats<br><strong>S1E1 </strong>"Ricky Jenkins and Bob Balian"</p>
+          <p>City Beats<br><strong>S1E1<br></strong>"Ricky Jenkins and Bob Balian"</p>
           <div class="inside-top">
             <img class="top" src="assets/CityBeatsTop.jpg">
             <img class="bottom" src="assets/CityBeatsBottom.jpg">
