Added more show graphics

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
           </div>
         </li>
          <li class="card">
+          <p>The Flip/Side<br><strong>E96<br></strong>"Genuine Encouragement"</p>
           <div class="inside-top">
-            <img src="http://placehold.it/256x144">
+            <img class="top" src="assets/ShowCards_FlipSideTop.png">
+            <img class="bottom" src="assets/ShowCards_FlipSideBottom.png">
           </div>
         </li>
          <li class="card">
@@ -48,8 +50,10 @@
           </div>
         </li>
          <li class="card">
+          <p>Parenting in a Pandemic<br><strong>E1<br></strong>"The Johnstons"</p>
           <div class="inside-top">
-            <img src="http://placehold.it/256x144">
+            <img class="top" src="assets/ShowCards_ParentingTop.png">
+            <img class="bottom" src="assets/ShowCards_ParentingBottom.png">
           </div>
         </li>
          <li class="card">
@@ -162,8 +166,8 @@
          <li class="card">
           <p>City Beats<br><strong>S1E1<br></strong>"Ricky Jenkins and Bob Balian"</p>
           <div class="inside-top">
-            <img class="top" src="assets/CityBeatsTop.jpg">
-            <img class="bottom" src="assets/CityBeatsBottom.jpg">
+            <img class="top" src="assets/ShowCards_CityBeatsTop.png">
+            <img class="bottom" src="assets/ShowCards_CityBeatsBottom.png">
           </div>
         </li>
          <li class="card">
