added more show cards

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="hero-description"><p>Join Pastor Andrew for intentional conversations about pandemic parenting!</p></div>
       </div>
     </div>
+      <h2 class="module-category">Trending Now</h2>
       <div class="module-section">
         <span  class="controlL left-controls" role="button" aria-label="See Previous Modules">
           <b class="fa fa-chevron-left fa-chevron-left-extra" aria-hidden="true"></b>
@@ -40,8 +41,10 @@
           </div>
         </li>
          <li class="card">
+          <p>City Beats<br><strong>S1E1<br></strong>"Ricky Jenkins and Bob Balian"</p>
           <div class="inside-top">
-            <img src="http://placehold.it/256x144">
+            <img class="top" src="assets/ShowCards_CityBeatsTop.png">
+            <img class="bottom" src="assets/ShowCards_CityBeatsBottom.png">
           </div>
         </li>
          <li class="card">
@@ -152,6 +155,7 @@
       </span> 
        
       </div><!--end of module-section-->
+      <h2 class="module-category">Kids</h2>
       <div class="module-section">
         <span  class="controlL left-controls" role="button" aria-label="See Previous Modules">
           <b class="fa fa-chevron-left fa-chevron-left-extra" aria-hidden="true"></b>
@@ -164,15 +168,17 @@
           </div>
         </li>
          <li class="card">
-          <p>City Beats<br><strong>S1E1<br></strong>"Ricky Jenkins and Bob Balian"</p>
+          <p>SideShow<br><strong>S1E19<br></strong>"Be Kind"</p>
           <div class="inside-top">
-            <img class="top" src="assets/ShowCards_CityBeatsTop.png">
-            <img class="bottom" src="assets/ShowCards_CityBeatsBottom.png">
+            <img class="top" src="assets/ShowCards_SideShowTop.png">
+            <img class="bottom" src="assets/ShowCards_SideShowBottom.png">
           </div>
         </li>
          <li class="card">
+          <p>SideShow Jr.<br><strong>S1E20<br></strong>"Make Good Choices"</p>
           <div class="inside-top">
-            <img src="http://placehold.it/256x144">
+            <img class="top" src="assets/ShowCards_SideShowJrTop.png">
+            <img class="bottom" src="assets/ShowCards_SideShowJrBottom.png">
           </div>
         </li>
          <li class="card">
