--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
        
       </div><!--end of module-section-->
       
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
